# kdv5-solver

./: .gitignore  CMakeLists.txt  kdv5_example_1.cpp  kdv5_example_2.cpp
kdv5/: CMakeLists.txt
kdv5/include/: kdv_5.h  service.h
kdv5/lib/: CMakeLists.txt
kdv5/lib/googletest-master/googletest/include/gtest/: gtest-printers.h
kdv5/lib/lapack-3.8.0/LAPACKE/: CMakeLists.txt
kdv5/source/: CMakeLists.txt  coefficients.cpp  dgbsv.cpp  exp_parameters.cpp  kdv_5.cpp  main.cpp  mesh_props.cpp  model_parameters.cpp  service.cpp
kdv5/tests/: CMakeLists.txt  approximation_order.cpp  gtest_ext.h  l2_norm.cpp
